Remove build script and vercel.json - rely on Vercel auto-detection
- Remove build script from package.json (Vercel handles TypeScript compilation automatically)
- Remove vercel.json to use Vercel's auto-detection for serverless functions
- Endpoint now works without .ts extension

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Free tier Cholq'ij calendar serverless function for Walking The White Road",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "tsc"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "@vercel/node": "^2.3.0",
